# workdaemon

./: .env.example  .gitignore  .vercelignore  DEMO.md  INTEGRATIONS.md  OAUTH_SETUP_COMPLETE.md  README.md  SECURITY.md  STATUS.md  WHERE_TO_ADD_KEYS.md  eslint.config.js  index.html  migration_agents.sql  migration_brain_skills_discovered.sql  migration_company_brain_v2.sql  migration_cross_daemon.sql  migration_daemons_general.sql  migration_detected_patterns.sql  migration_doc_access.sql  migration_knowledge_graph.sql  migration_l3_autopublish.sql  migration_learning.sql  migration_multi_provider.sql  migration_permission_level.sql  migration_pgvector.sql  migration_task_from_finding.sql  migration_user_delete_fkeys.sql  migration_workspace_integrations.sql  migration_workspace_location.sql  package-lock.json  package.json  schema.sql  skills-lock.json  update.md  vercel.json  vitest.config.js
backend/: .env.example  SECURITY.md  pyproject.toml
backend/deploy/: modal_app.py
backend/migrations/: 001_init.sql  002_align_existing_tables.sql  003_memory_chunks.sql  004_integrations.sql  005_daemon_identity.sql
backend/scripts/: apply_migration.py  dry_run.py  verify_deepseek.py
backend/src/: config.py  db.py  resilience.py
backend/src/agents/: company_model.py  factory.py  profiles.py  prompts.py  runtime.py  tool_permissions.py  tools.py
backend/src/api/: auth.py  blocks.py  chat_service.py  deps.py  main.py  websocket.py
backend/src/brain/: context.py  (+9 more)
backend/tests/: conftest.py  test_agent_layer.py  test_auth.py  test_blocks.py  test_brain_router.py  test_chat_service.py  test_context_graph.py  test_cross_agent.py  test_cross_daemon.py  test_daemon_character.py  test_golden_scenarios.py  test_google_tools.py  test_hunts_patterns.py  test_hybrid_brain.py  test_ingestion.py  test_integrations.py  test_isolation.py  test_isolation_gate.py  test_orchestration.py  test_real_tools.py  test_resilience.py  test_training_loop.py
finetuning/: .env.example  Dockerfile  MULTI_LORA_PLAN.md  README.md  docker-compose.yml  modal_app.py  pyproject.toml  railway.toml
finetuning/migrations/: 001_finetuning_tables.sql  002_company_brain_schema.sql  003_serving_heartbeat.sql
finetuning/modal/: embeddings_app.py  serve_app.py
finetuning/scripts/: mint_serve_token.py  run_migration.py  run_one_company.py  seed_company.py  seed_signals.py  seed_test_signals.py  validate_train.py
finetuning/src/: config.py  db.py  vectors.py
finetuning/tests/: conftest.py  test_brain_dataset.py  test_dataset_builder.py  test_formatters.py  test_gate.py  test_ingestion.py  test_isolation.py  test_patterns.py  test_permissions.py  test_qa_synth.py  test_serve_gate.py
(+306 files in other folders)
