[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workdaemon-backend"
version = "0.1.0"
description = "WorkDaemon Company Brain — DeepSeek V4 brain, Hermes-product agents, cross-daemon coordination (FINAL build spec)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",            # OpenAI-compatible HTTP client for DeepSeek (not OpenAI models)
    "fastembed>=0.3.0",         # free in-process embeddings for RAG (no API, no key)
    "supabase>=2.4.0",
    "redis>=5.0.0",             # activity feed + cross-agent bus
    "neo4j>=5.19.0",            # knowledge graph
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
graph = ["neo4j>=5.19.0"]
web = ["tavily-python>=0.3.0", "firecrawl-py>=0.0.16"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
