[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workdaemon-finetuning"
version = "0.1.0"
description = "Continuous per-company fine-tuning pipeline for WorkDaemon Brain"
requires-python = ">=3.11"
dependencies = [
    # Infra / orchestration (runs locally + on Modal CPU)
    "modal>=0.62.0",
    "huggingface-hub>=0.22.0",
    "supabase>=2.4.0",
    "inngest>=0.4.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    # Config + utils
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
# GPU deps — installed inside the Modal image, not locally (Linux/CUDA only).
gpu = [
    "unsloth",
    "trl>=0.8.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "ragas>=0.1.9",
]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyright>=1.1.360",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
strict = true
